# spl-faucet

./: Anchor.toml  README.md
programs/faucet/: Cargo.toml
programs/faucet/src/: lib.rs
programs/faucet/src/dot/: program.rs
programs_py/: faucet.py
tests/: faucet.ts
